--- a/_data/companies.yml
+++ b/_data/companies.yml
@@ -2041,6 +2041,13 @@
   visitors: N/A
   events: N/A
   last_update: 2020-03-11
+  
+  - name: Sprout Social, Inc.
+  wfh: Encouraged (for all offices)
+  travel: Restricted
+  visitors: Restricted
+  events: Restricted
+  last_update: 2020-03-13
 
 - name: Spotify[[1]](https://twitter.com/eldsjal/status/1237487784996343813)
   wfh: Required
